# FusionUI

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
CMake/: FusionPlatform.cmake  Resources.cmake  Shaders.cmake
CMake/Scripts/: EmbedShader.cmake
Docs/: FusionTextDoc.md
FusionCore/Include/Fusion/: Core.h  FusionCore.h
FusionCore/Include/Fusion/Algorithm/: Hash.h
FusionCore/Include/Fusion/Containers/: Array.h  HashMap.h  Name.h  StableDynamicArray.h  String.h
FusionCore/Include/Fusion/Delegates/: Delegate.h  Signal.h
FusionCore/Include/Fusion/Image/: Image.h
FusionCore/Include/Fusion/Log/: Log.h
FusionCore/Include/Fusion/Math/: AffineTransform.h  Color.h  Rect.h  Vec2.h  Vec4.h
FusionCore/Include/Fusion/Misc/: Assert.h  CoreMacros.h  Exception.h  Handle.h  IntrusivePtr.h
FusionCore/Include/Fusion/Object/: Object.h  Variant.h
FusionCore/Include/Fusion/Templates/: Templates.h  TypeTraits.h
FusionCore/Source/Containers/: String.cpp
FusionCore/Source/Image/: Image.cpp
FusionCore/Source/Log/: Log.cpp
FusionCore/Source/Math/: Color.cpp
FusionCore/Source/Misc/: Assert.cpp
FusionCore/Source/Object/: Object.cpp  Variant.cpp
FusionCore/Tests/: FusionCoreTests.cpp
FusionPlatform/Include/Fusion/Platform/: IPlatformBackend.h  PlatformTypes.h
FusionRHI/Include/Fusion/: RHI.h
FusionRHI/Include/Fusion/RHI/: IRenderBackend.h  RenderSnapshot.h  UIDrawData.h  UIDrawList.h
FusionRHI/Source/: UIDrawList.cpp
FusionResources/Include/Fusion/Resources/: EmbeddedResources.h
FusionSDL3Platform/Include/Fusion/SDL3Platform/: SDL3PlatformBackend.h  SDL3PlatformWindow.h
FusionSDL3Platform/Source/PAL/Windows/: SDL3WindowsPlatform.h
FusionSDL3Platform/Source/SDL3Platform/: SDL3PlatformBackend.cpp  SDL3PlatformWindow.cpp
FusionShaderLibrary/: CMakeLists.txt  fusionshaderlibrary_private_files.cmake  fusionshaderlibrary_public_files.cmake
FusionShaderLibrary/Include/Fusion/: ShaderLibrary.h
FusionShaderLibrary/Include/Fusion/ShaderLibrary/: EmbeddedShaders.h  ShaderTypes.h
FusionShaderLibrary/Shaders/: Fusion.slang  MipMap.slang
FusionShaderLibrary/Shaders/Fusion/: Core.slang
FusionVulkanRHI/: CMakeLists.txt  fusionvulkanrhi_private_files.cmake
FusionVulkanRHI/Include/Fusion/: VulkanRHI.h
FusionVulkanRHI/Include/Fusion/VulkanRHI/: Buffer.h  Defines.h  TextureAtlas.h  VulkanRenderBackend.h
FusionVulkanRHI/Source/: Buffer.cpp  TextureAtlas.cpp  VulkanRHIPrivate.h  VulkanRenderBackend.cpp
FusionVulkanRHI/Source/PAL/: VulkanPlatform.h
FusionVulkanRHI/Source/PAL/Mac/: VulkanMacPlatform.h  VulkanMacPlatform.mm
FusionVulkanRHI/Source/PAL/Windows/: VulkanWindowsPlatform.h
FusionWidgets/: CMakeLists.txt
FusionWidgets/Include/Fusion/: Macros.h  Widgets.h
FusionWidgets/Include/Fusion/Animation/: Animatable.h  AnimateBuilder.h  SpringAnimation.h  Transition.h  TweenAnimation.h
FusionWidgets/Include/Fusion/Application/: Application.h  ApplicationInstance.h  Cursor.h
FusionWidgets/Include/Fusion/Event/: Event.h
FusionWidgets/Include/Fusion/Font/: FontAtlas.h
FusionWidgets/Include/Fusion/Image/: ImageAtlas.h
FusionWidgets/Source/Animation/: EasingCurve.cpp
FusionWidgets/Source/Application/: Application.cpp  ApplicationInstance.cpp
FusionWidgets/Source/Font/: FontAtlas.cpp
FusionWidgets/Source/Image/: ImageAtlas.cpp
FusionWidgets/Source/Layer/: Layer.cpp  LayerTree.cpp
FusionWidgets/Source/Model/: ItemModel.cpp
FusionWidgets/Source/Painting/: Painter.cpp
FusionWidgets/Source/Style/: Brush.cpp  Font.cpp  Gradient.cpp  Pen.cpp  Style.cpp  StyleSheet.cpp  Theme.cpp
FusionWidgets/Source/Surface/: NativeSurface.cpp  Surface.cpp
FusionWidgets/Source/Text/: LineBuffer.cpp  TextDocument.cpp
FusionWidgets/Source/Widget/: Button.cpp  CompoundWidget.cpp  ContainerWidget.cpp  DecoratedBox.cpp  DecoratedWidget.cpp  Label.cpp  SlottedWidget.cpp  Widget.cpp
Samples/: CMakeLists.txt
Samples/Sandbox/: CMakeLists.txt
Samples/Source/: Main.cpp
Samples/TextSamples/: CMakeLists.txt
Samples/TreeView/: CMakeLists.txt
Samples/TreeView/Source/: Main.cpp
(+58 files in other folders)
